# wwn-anowaW

./: .gitignore  README.md  flake.nix
.github/scripts/: verify-anowaw-abi.py
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: bridge.rs  buffer.rs  ffi.rs  input.rs  lib.rs  surface.rs
dependencies/libs/anowaw/: android.nix  anowaw-src.nix  ios.nix  macos.nix  tvos.nix  visionos.nix  watchos.nix
include/: anowaw.h
platform/android/jni/: anowaw_jni.c
platform/android/kotlin/: AnowawBridge.kt  AnowawNative.kt  AnowawPowerController.kt  AnowawProjectionService.kt
platform/macos/: AnowawMacBridge.h  AnowawMacBridge.m
